2008-06-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position): cast menu's
	toplevel to GtkWindow when passing to gtk_window_set_type_hint().

2008-06-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkuimanager.c (start_element_handler): silently skip
	unknown attributes instead of bailing out with an error in order
	to be compatible with possible future attribute names.

	This is related to the discussion in bug #516425 but actually
	needed for any kind of XML format extension.

2008-05-23  Hans Breuer  <hans@breuer.org>

	* gtk/gtkprintoperation.c : check surface status after ceating a pdf.
	Avoids crashing when the target can not be written, bug #537685

	* gdk/win32/gdkdisplay-win32.c : runtime linking of ProcessIdToSessionId

	* gtk/gtkfilesystem.c : variadic macros are not supported with c89 and
	it was not needed here anyway.

2008-06-13 Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (gtk_entry_draw_frame): Fix frame size allocation.
	Patch by Jan Arne Peterson

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 537985 – gtk_init_with_args() doesn't open a display after
	gtk_parse_args()

	* gtk/gtkmain.c (gtk_init_with_args): Open the default display
	even when gtk_parse_args() has already been called.
	Patch by Mathias Hasselmann

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 524222 – GtkToolbar with mix of buttons with and without 
	icons looks "bad"

	* gtk/gtktoolbutton.c (gtk_tool_button_construct_contents):
	Improve appearance of "both vertical" mode toolbuttons.
	Patch by Peter Johanson

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 519092 – Add accessibility support to GtkVolumeButton

	* gtk/gtkvolumebutton.c: Set accessibility descriptions.
	Patch by Jonh Wendell

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 517706 – Connecting GtkButton with "use-stock" == FALSE to a
	GtkAction has problems
	Patch by Peter Johanson
